{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 1322,
  "lineage": "c49fed8d-e150-b97b-afff-03a4a17bceab",
  "resources": [
    {
      "module": "module.dev_ansible",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible-Node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:842051480147:instance/i-0d52911f139795b95",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d52911f139795b95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-044da96d92840a054",
            "private_dns": "ip-10-0-1-183.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.183",
            "public_ip": "52.26.44.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff9661a45cb835e6",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0489372a332601a9a",
            "tags": {
              "Name": "Ansible_Node"
            },
            "tags_all": {
              "Name": "Ansible_Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067fca6fa4c80f19c"
            ]
          },
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc",
            "module.keypair.aws_key_pair.JenCont_Key"
          ]
        }
      ]
    },
    {
      "module": "module.dev_docker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "JenCont-Docker-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:842051480147:instance/i-0c85772905316353b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c85772905316353b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02e00a10c06752b59",
            "private_dns": "ip-10-0-1-245.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.245",
            "public_ip": "18.236.131.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-024c83cf4c3fdcb8d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0489372a332601a9a",
            "tags": {
              "Name": "JenCont-Docker-Server"
            },
            "tags_all": {
              "Name": "JenCont-Docker-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067fca6fa4c80f19c"
            ]
          },
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc",
            "module.keypair.aws_key_pair.JenCont_Key"
          ]
        }
      ]
    },
    {
      "module": "module.dev_jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins-Host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:842051480147:instance/i-0ad2eac104b70adc7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad2eac104b70adc7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f61b72cb0843b354",
            "private_dns": "ip-10-0-1-78.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.78",
            "public_ip": "52.33.36.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08b1afcd1edb83e00",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0489372a332601a9a",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067fca6fa4c80f19c"
            ]
          },
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc",
            "module.keypair.aws_key_pair.JenCont_Key"
          ]
        }
      ]
    },
    {
      "module": "module.dev_loadbalance",
      "mode": "managed",
      "type": "aws_lb",
      "name": "JenContainer-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:loadbalancer/app/JenContainer-lb/bd43d1d801832333",
            "arn_suffix": "app/JenContainer-lb/bd43d1d801832333",
            "desync_mitigation_mode": "defensive",
            "dns_name": "JenContainer-lb-611062737.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:842051480147:loadbalancer/app/JenContainer-lb/bd43d1d801832333",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "JenContainer-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-067fca6fa4c80f19c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0489372a332601a9a"
              },
              {
                "subnet_id": "subnet-095d75dfab64ecd96"
              }
            ],
            "subnets": [
              "subnet-0489372a332601a9a",
              "subnet-095d75dfab64ecd96"
            ],
            "vpc_id": "vpc-0d65891110843629c",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn2",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_loadbalance",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "JenContainer_lb_lisner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:listener/app/JenContainer-lb/bd43d1d801832333/d61f1e1563b6f144",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:targetgroup/Jencontainer-tg/76ef8b15cadc40dd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:842051480147:listener/app/JenContainer-lb/bd43d1d801832333/d61f1e1563b6f144",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:loadbalancer/app/JenContainer-lb/bd43d1d801832333",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_loadbalance.aws_lb.JenContainer-lb",
            "module.dev_loadbalance.aws_lb_target_group.Jencontainer-tg",
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn2",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_loadbalance",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Jencontainer-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:targetgroup/Jencontainer-tg/76ef8b15cadc40dd",
            "arn_suffix": "targetgroup/Jencontainer-tg/76ef8b15cadc40dd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:842051480147:targetgroup/Jencontainer-tg/76ef8b15cadc40dd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Jencontainer-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d65891110843629c"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_loadbalance",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "PEP_attachmenet_TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:842051480147:targetgroup/Jencontainer-tg/76ef8b15cadc40dd-20221010092231085100000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:targetgroup/Jencontainer-tg/76ef8b15cadc40dd",
            "target_id": "i-0c85772905316353b"
          },
          "dependencies": [
            "module.dev_docker.aws_instance.JenCont-Docker-Server",
            "module.dev_loadbalance.aws_lb_target_group.Jencontainer-tg",
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc",
            "module.keypair.aws_key_pair.JenCont_Key"
          ]
        }
      ]
    },
    {
      "module": "module.dev_securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DocJenSona_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:security-group/sg-067fca6fa4c80f19c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067fca6fa4c80f19c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DocJenSona_sg",
            "name_prefix": "",
            "owner_id": "842051480147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DocJenSona_sg"
            },
            "tags_all": {
              "Name": "DocJenSona_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d65891110843629c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_sonarQube",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarQube-Host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:842051480147:instance/i-03a97f651e0588980",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a97f651e0588980",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07de4f29e865fe15b",
            "private_dns": "ip-10-0-2-174.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.174",
            "public_ip": "35.88.179.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06dadab754b03d8a6",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095d75dfab64ecd96",
            "tags": {
              "Name": "sonarQube-Server"
            },
            "tags_all": {
              "Name": "sonarQube-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067fca6fa4c80f19c"
            ]
          },
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn2",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "JenCont_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0577e48e5f29c655e",
            "association_id": "eipassoc-09f8ae6e9ef3cc1fb",
            "domain": "vpc",
            "id": "eipalloc-0577e48e5f29c655e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0fe6d38bba6c57443",
            "private_dns": "ip-10-0-1-180.us-west-2.compute.internal",
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-52-89-6-148.us-west-2.compute.amazonaws.com",
            "public_ip": "52.89.6.148",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "JenCont-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:internet-gateway/igw-0cd78a1e636ab3b88",
            "id": "igw-0cd78a1e636ab3b88",
            "owner_id": "842051480147",
            "tags": {
              "Name": "JenCont-igw"
            },
            "tags_all": {
              "Name": "JenCont-igw"
            },
            "vpc_id": "vpc-0d65891110843629c"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "JenCont_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0577e48e5f29c655e",
            "connectivity_type": "public",
            "id": "nat-098d0ab1490cc4b81",
            "network_interface_id": "eni-0fe6d38bba6c57443",
            "private_ip": "10.0.1.180",
            "public_ip": "52.89.6.148",
            "subnet_id": "subnet-0489372a332601a9a",
            "tags": {
              "Name": "JenCont_NAT_GW"
            },
            "tags_all": {
              "Name": "JenCont_NAT_GW"
            }
          },
          "dependencies": [
            "module.dev_vpc.aws_eip.JenCont_EIP",
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "JenCont_PRV_SN_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:route-table/rtb-010a15250a87241de",
            "id": "rtb-010a15250a87241de",
            "owner_id": "842051480147",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-098d0ab1490cc4b81",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JenCont_PRV_SN_RT"
            },
            "tags_all": {
              "Name": "JenCont_PRV_SN_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d65891110843629c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_vpc.aws_nat_gateway.JenCont_NAT_GW",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "JenCont_PUB_SN_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:route-table/rtb-09cbf5210f9e8904b",
            "id": "rtb-09cbf5210f9e8904b",
            "owner_id": "842051480147",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd78a1e636ab3b88",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JenCont_PUB_SN_RT"
            },
            "tags_all": {
              "Name": "JenCont_PUB_SN_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d65891110843629c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0021977153cad94df",
            "route_table_id": "rtb-09cbf5210f9e8904b",
            "subnet_id": "subnet-0489372a332601a9a"
          },
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_route_table.JenCont_PUB_SN_RT",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de656ecc11897a87",
            "route_table_id": "rtb-010a15250a87241de",
            "subnet_id": "subnet-01f7cd46eb466d8e4"
          },
          "dependencies": [
            "module.dev_vpc.aws_eip.JenCont_EIP",
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_nat_gateway.JenCont_NAT_GW",
            "module.dev_vpc.aws_route_table.JenCont_PRV_SN_RT",
            "module.dev_vpc.aws_subnet.JenCont-prv-sn1",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d141dabadba47dd",
            "route_table_id": "rtb-09cbf5210f9e8904b",
            "subnet_id": "subnet-095d75dfab64ecd96"
          },
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_route_table.JenCont_PUB_SN_RT",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn2",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046731689e7d10e2c",
            "route_table_id": "rtb-010a15250a87241de",
            "subnet_id": "subnet-02040ab78ab3e51ec"
          },
          "dependencies": [
            "module.dev_vpc.aws_eip.JenCont_EIP",
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_nat_gateway.JenCont_NAT_GW",
            "module.dev_vpc.aws_route_table.JenCont_PRV_SN_RT",
            "module.dev_vpc.aws_subnet.JenCont-prv-sn2",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JenCont-prv-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:subnet/subnet-01f7cd46eb466d8e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f7cd46eb466d8e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842051480147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JenCont-prv_sn1"
            },
            "tags_all": {
              "Name": "JenCont-prv_sn1"
            },
            "vpc_id": "vpc-0d65891110843629c"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JenCont-prv-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:subnet/subnet-02040ab78ab3e51ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02040ab78ab3e51ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842051480147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JenCont-prv_sn2"
            },
            "tags_all": {
              "Name": "JenCont-prv_sn2"
            },
            "vpc_id": "vpc-0d65891110843629c"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JenCont-pub-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:subnet/subnet-0489372a332601a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0489372a332601a9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842051480147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JenCont-pub_sn1"
            },
            "tags_all": {
              "Name": "JenCont-pub_sn1"
            },
            "vpc_id": "vpc-0d65891110843629c"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JenCont-pub-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:subnet/subnet-095d75dfab64ecd96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095d75dfab64ecd96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842051480147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JenCont-pub_sn2"
            },
            "tags_all": {
              "Name": "JenCont-pub_sn2"
            },
            "vpc_id": "vpc-0d65891110843629c"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "JenCont-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:vpc/vpc-0d65891110843629c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d8f743066a36e7d",
            "default_route_table_id": "rtb-0dd67026b90afcebd",
            "default_security_group_id": "sg-01d340b809344c92f",
            "dhcp_options_id": "dopt-0bf73da7cd25a7117",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d65891110843629c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd67026b90afcebd",
            "owner_id": "842051480147",
            "tags": {
              "Name": "JenCont"
            },
            "tags_all": {
              "Name": "JenCont"
            }
          }
        }
      ]
    }
  ]
}